CNI/GKE/gke_ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsearch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # If you want to set a fixed IP
  annotations:
    kubernetes.io/ingress.global-static-ip-name: smartsearch-external-ip
  namespace: smartsearch
  name: smartsearch-ingress
  labels:
    app: smartSearch
    stage: production
spec:
  backend:
    serviceName: smartsearch-web
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /app/*
        backend:
          serviceName: smartsearch-web
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: smartsearch-api
          servicePort: 9000
    host: smartsearch.ddns.net
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: smartsearch
  name: dev-smartsearch-ingress
  labels:
    stage: development
    app: smartSearch
spec:
  backend:
    serviceName: dev-smartsearch-web
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /app/*
        backend:
          serviceName: dev-smartsearch-web
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: dev-smartsearch-api
          servicePort: 9000
    host: dev-smartsearch.ddns.net
